--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -116,7 +116,7 @@
               <a href=""><span>매거진 보러가기</span></a>
             </div>
           </div>
-          <div class="mobObj">
+          <div class="pointMobObj">
             <ul class="slide">
               <li>
                 <p><img src="images/pointmobobj1.png" alt="pointmobobj" /></p>
@@ -185,6 +185,19 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
+          <div class="brandMobObj">
+            <ul class="mobObjWrap">
+              <li>
+                <p><img src="images/ellemob1.jpg" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/ellemob2.jpg" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/ellemob3.jpg" alt="pointmobobj" /></p>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="mainPage darkPage brandPage cosmopolitan">
           <div class="obj">
@@ -203,6 +216,25 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
+          <div class="brandMobObj">
+            <ul class="mobObjWrap">
+              <li>
+                <p>
+                  <img src="images/cosmopolitanmob1.jpg" alt="pointmobobj" />
+                </p>
+              </li>
+              <li>
+                <p>
+                  <img src="images/cosmopolitanmob2.jpg" alt="pointmobobj" />
+                </p>
+              </li>
+              <li>
+                <p>
+                  <img src="images/cosmopolitanmob3.jpg" alt="pointmobobj" />
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="mainPage darkPage brandPage bazzar">
           <div class="obj">
@@ -218,6 +250,19 @@
             <div class="mainLink">
               <a href=""><span>바로가기</span></a>
             </div>
+          </div>
+          <div class="brandMobObj">
+            <ul class="mobObjWrap">
+              <li>
+                <p><img src="images/bazzarmob1.jpg" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/bazzarmob2.jpg" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/bazzarmob3.jpg" alt="pointmobobj" /></p>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="mainPage darkPage brandPage esquire">
@@ -235,11 +280,24 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
+          <div class="brandMobObj">
+            <ul class="mobObjWrap">
+              <li>
+                <p><img src="images/esquiremob1.jpg" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/esquiremob2.jpg" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/esquiremob3.jpg" alt="pointmobobj" /></p>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="mainPage brightPage whiteBg">
           <div class="txt">
             <p>
-              다채롭게<br class="mob" />
+              다채롭게<br class="pc" />
               경험해보세요
             </p>
             <p>개인 취향에 맞춘 테마별 서비스</p>
