--- a/반응형/0813_01_a-rt.html
+++ b/반응형/0813_01_a-rt.html
@@ -65,8 +65,6 @@
         height: 12px;
         background-color: #4d4d4d;
       }
-      header nav .txt .txtRight {
-      }
       header nav .ico {
         display: flex;
         margin-left: auto;
@@ -125,8 +123,6 @@
         border: 1px solid #aaa;
         border-bottom: none;
         box-sizing: border-box;
-      }
-      .right > li:first-child > ul > li {
         border-right: none;
       }
       .right > li > ul > li .event a p img {
@@ -137,6 +133,7 @@
       .right > li > ul > li .event a h3 {
         margin: 20px 0 26px;
         font-size: 24px;
+        line-height: 1.3;
       }
       .right > li > ul > li .itemWrap .item:nth-child(2) {
         margin-top: 10px;
