--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -185,19 +185,17 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
-          <div class="brandMobObj">
-            <ul class="mobObjWrap">
-              <li>
-                <p><img src="images/ellemob1.jpg" alt="pointmobobj" /></p>
-              </li>
-              <li>
-                <p><img src="images/ellemob2.jpg" alt="pointmobobj" /></p>
-              </li>
-              <li>
-                <p><img src="images/ellemob3.jpg" alt="pointmobobj" /></p>
-              </li>
-            </ul>
-          </div>
+          <ul class="brandMobObj">
+            <li>
+              <p><img src="images/ellemob1.jpg" alt="ellemob" /></p>
+            </li>
+            <li>
+              <p><img src="images/ellemob2.jpg" alt="ellemob" /></p>
+            </li>
+            <li>
+              <p><img src="images/ellemob3.jpg" alt="ellemob" /></p>
+            </li>
+          </ul>
         </div>
         <div class="mainPage darkPage brandPage cosmopolitan">
           <div class="obj">
@@ -216,25 +214,23 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
-          <div class="brandMobObj">
-            <ul class="mobObjWrap">
-              <li>
-                <p>
-                  <img src="images/cosmopolitanmob1.jpg" alt="pointmobobj" />
-                </p>
-              </li>
-              <li>
-                <p>
-                  <img src="images/cosmopolitanmob2.jpg" alt="pointmobobj" />
-                </p>
-              </li>
-              <li>
-                <p>
-                  <img src="images/cosmopolitanmob3.jpg" alt="pointmobobj" />
-                </p>
-              </li>
-            </ul>
-          </div>
+          <ul class="brandMobObj">
+            <li>
+              <p>
+                <img src="images/cosmopolitanmob1.jpg" alt="cosmopolitanmob" />
+              </p>
+            </li>
+            <li>
+              <p>
+                <img src="images/cosmopolitanmob2.jpg" alt="cosmopolitanmob" />
+              </p>
+            </li>
+            <li>
+              <p>
+                <img src="images/cosmopolitanmob3.jpg" alt="cosmopolitanmob" />
+              </p>
+            </li>
+          </ul>
         </div>
         <div class="mainPage darkPage brandPage bazzar">
           <div class="obj">
@@ -251,19 +247,17 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
-          <div class="brandMobObj">
-            <ul class="mobObjWrap">
-              <li>
-                <p><img src="images/bazzarmob1.jpg" alt="pointmobobj" /></p>
-              </li>
-              <li>
-                <p><img src="images/bazzarmob2.jpg" alt="pointmobobj" /></p>
-              </li>
-              <li>
-                <p><img src="images/bazzarmob3.jpg" alt="pointmobobj" /></p>
-              </li>
-            </ul>
-          </div>
+          <ul class="brandMobObj">
+            <li>
+              <p><img src="images/bazzarmob1.jpg" alt="bazzarmob" /></p>
+            </li>
+            <li>
+              <p><img src="images/bazzarmob2.jpg" alt="bazzarmob" /></p>
+            </li>
+            <li>
+              <p><img src="images/bazzarmob3.jpg" alt="bazzarmob" /></p>
+            </li>
+          </ul>
         </div>
         <div class="mainPage darkPage brandPage esquire">
           <div class="obj">
@@ -280,19 +274,17 @@
               <a href=""><span>바로가기</span></a>
             </div>
           </div>
-          <div class="brandMobObj">
-            <ul class="mobObjWrap">
-              <li>
-                <p><img src="images/esquiremob1.jpg" alt="pointmobobj" /></p>
-              </li>
-              <li>
-                <p><img src="images/esquiremob2.jpg" alt="pointmobobj" /></p>
-              </li>
-              <li>
-                <p><img src="images/esquiremob3.jpg" alt="pointmobobj" /></p>
-              </li>
-            </ul>
-          </div>
+          <ul class="brandMobObj">
+            <li>
+              <p><img src="images/esquiremob1.jpg" alt="esquiremob" /></p>
+            </li>
+            <li>
+              <p><img src="images/esquiremob2.jpg" alt="esquiremob" /></p>
+            </li>
+            <li>
+              <p><img src="images/esquiremob3.jpg" alt="esquiremob" /></p>
+            </li>
+          </ul>
         </div>
         <div class="mainPage brightPage whiteBg">
           <div class="txt">
