--- a/0820_02_js.html
+++ b/0820_02_js.html
@@ -18,7 +18,7 @@
       window.addEventListener("load", function () {
         console.log("load");
       });
-      // 1. DOM구성이 완료된 후 실행되는 코드
+      // 1. DOM구성이 완료된 후 실행되는 코드 (이미지, 스타일 로딩이 완료되지 않아도 발생)
       document.addEventListener("DOMContentLoaded", function () {
         console.log("DOMContentLoaded");
       });
