--- a/0902_06_onmousemove.html
+++ b/0902_06_onmousemove.html
@@ -29,9 +29,9 @@
         let form = document.getElementById("form1");
         form.clientX.value = e.clientX;
         form.clientY.value = e.clientY;
-        form.pX.value = e.pageX; //스크롤 포함
+        form.pX.value = e.pageX; // 스크롤 포함
         form.pY.value = e.pageY;
-        form.screenX.value = e.screenX;
+        form.screenX.value = e.screenX; // 모니터 전체 기준
         form.screenY.value = e.screenY;
       };
     </script>
